Init repairs to damaged branch

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\codyc\\anaconda3\\Lib\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import scripts.cccco as cccco\n",
     "import scripts.college_scorecard as scorecard\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +243,7 @@
        "4 -117.183980             PalomarCollegeLogo.jpg     None  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +405,7 @@
        "4  [{'CollegeID': '071', 'CollegeName': 'San Dieg...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +457,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +753,7 @@
        "86                  WLAC logo-color.jpg     None  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +786,7 @@
     }
    ],
    "source": [
-    "ax = all_districts[\"NumberOfColleges\"].value_counts().plot(\n",
+    "ax = all_districts[\"CollegesPerDistrict\"].value_counts().plot(\n",
     "    kind=\"barh\",\n",
     "    title=\"Number of Colleges per District\",\n",
     "    xlabel=\"Count of Districts\",\n",
@@ -793,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +824,6 @@
        "DistrictName\n",
        "Single College District                                    49\n",
        "Grossmont-Cuyamaca                                          1\n",
-       "Kern                                                        1\n",
        "Riverside                                                   1\n",
        "South Orange County                                         1\n",
        "Rancho Santiago                                             1\n",
@@ -826,6 +834,7 @@
        "Yosemite                                                    1\n",
        "West Hills                                                  1\n",
        "State Center                                                1\n",
+       "Kern                                                        1\n",
        "West Valley-Mission                                         1\n",
        "Chabot-Las Positas                                          1\n",
        "San José-Evergreen                                          1\n",
@@ -835,13 +844,12 @@
        "Contra Costa                                                1\n",
        "Yuba                                                        1\n",
        "Los Rios                                                    1\n",
-       "Calbright                                                   1\n",
        "San Diego                                                   1\n",
        "San Bernardino                                              1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -887,6 +895,7 @@
        "      <th>MailingAddress</th>\n",
        "      <th>MailingCity</th>\n",
        "      <th>...</th>\n",
+       "      <th>Phone</th>\n",
        "      <th>WebsiteURL</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
@@ -895,7 +904,6 @@
        "      <th>DistrictName</th>\n",
        "      <th>DistrictTitle</th>\n",
        "      <th>WebsiteURLDistrict</th>\n",
-       "      <th>NumberOfColleges</th>\n",
        "      <th>CollegesPerDistrict</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -913,6 +921,7 @@
        "      <td>900 Rancho San Diego Parkway</td>\n",
        "      <td>El Cajon</td>\n",
        "      <td>...</td>\n",
+       "      <td>619.660.4000</td>\n",
        "      <td>www.cuyamaca.edu</td>\n",
        "      <td>32.744890</td>\n",
        "      <td>-116.935229</td>\n",
@@ -921,7 +930,6 @@
        "      <td>Grossmont-Cuyamaca                            ...</td>\n",
        "      <td>Grossmont-Cuyamaca Community College District</td>\n",
        "      <td>www.gcccd.edu</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -937,6 +945,7 @@
        "      <td>8800 Grossmont College Drive</td>\n",
        "      <td>El Cajon</td>\n",
        "      <td>...</td>\n",
+       "      <td>619.644.7000</td>\n",
        "      <td>www.grossmont.edu</td>\n",
        "      <td>32.817897</td>\n",
        "      <td>-117.005640</td>\n",
@@ -945,7 +954,6 @@
        "      <td>Grossmont-Cuyamaca                            ...</td>\n",
        "      <td>Grossmont-Cuyamaca Community College District</td>\n",
        "      <td>www.gcccd.edu</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -961,6 +969,7 @@
        "      <td>380 East Aten Road</td>\n",
        "      <td>Imperial</td>\n",
        "      <td>...</td>\n",
+       "      <td>760.352.8320</td>\n",
        "      <td>www.imperial.edu</td>\n",
        "      <td>32.825859</td>\n",
        "      <td>-115.502999</td>\n",
@@ -969,7 +978,6 @@
        "      <td>Single College District</td>\n",
        "      <td>Imperial Community College District</td>\n",
        "      <td>www.imperial.edu</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -985,6 +993,7 @@
        "      <td>1 Barnard Drive</td>\n",
        "      <td>Oceanside</td>\n",
        "      <td>...</td>\n",
+       "      <td>760.757.2121</td>\n",
        "      <td>www.miracosta.edu</td>\n",
        "      <td>33.188864</td>\n",
        "      <td>-117.301064</td>\n",
@@ -993,7 +1002,6 @@
        "      <td>Single College District</td>\n",
        "      <td>MiraCosta Community College District</td>\n",
        "      <td>www.miracosta.edu</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1009,6 +1017,7 @@
        "      <td>1140 West Mission Road</td>\n",
        "      <td>San Marcos</td>\n",
        "      <td>...</td>\n",
+       "      <td>760.744.1150</td>\n",
        "      <td>www.palomar.edu</td>\n",
        "      <td>33.147015</td>\n",
        "      <td>-117.183980</td>\n",
@@ -1018,11 +1027,10 @@
        "      <td>Palomar Community College District</td>\n",
        "      <td>www.palomar.edu</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1040,19 +1048,19 @@
        "3   Oceanside  San Diego   92056     3899               1 Barnard Drive    \n",
        "4  San Marcos  San Diego   92069     1487        1140 West Mission Road    \n",
        "\n",
-       "  MailingCity  ...         WebsiteURL   Latitude   Longitude  \\\n",
-       "0    El Cajon  ...   www.cuyamaca.edu  32.744890 -116.935229   \n",
-       "1    El Cajon  ...  www.grossmont.edu  32.817897 -117.005640   \n",
-       "2    Imperial  ...   www.imperial.edu  32.825859 -115.502999   \n",
-       "3   Oceanside  ...  www.miracosta.edu  33.188864 -117.301064   \n",
-       "4  San Marcos  ...    www.palomar.edu  33.147015 -117.183980   \n",
+       "  MailingCity  ...          Phone         WebsiteURL   Latitude   Longitude  \\\n",
+       "0    El Cajon  ...  619.660.4000    www.cuyamaca.edu  32.744890 -116.935229   \n",
+       "1    El Cajon  ...  619.644.7000   www.grossmont.edu  32.817897 -117.005640   \n",
+       "2    Imperial  ...  760.352.8320    www.imperial.edu  32.825859 -115.502999   \n",
+       "3   Oceanside  ...  760.757.2121   www.miracosta.edu  33.188864 -117.301064   \n",
+       "4  San Marcos  ...  760.744.1150     www.palomar.edu  33.147015 -117.183980   \n",
        "\n",
-       "                             LogoURL  District  \\\n",
-       "0            CuyamacaCollegeLogo.jpg      None   \n",
-       "1           GrossmontCollegelogo.jpg      None   \n",
-       "2  ImperialValleyCollegeLogocopy.jpg      None   \n",
-       "3     Mira_Costa_College_Logo_4c.png      None   \n",
-       "4             PalomarCollegeLogo.jpg      None   \n",
+       "                             LogoURL District  \\\n",
+       "0            CuyamacaCollegeLogo.jpg     None   \n",
+       "1           GrossmontCollegelogo.jpg     None   \n",
+       "2  ImperialValleyCollegeLogocopy.jpg     None   \n",
+       "3     Mira_Costa_College_Logo_4c.png     None   \n",
+       "4             PalomarCollegeLogo.jpg     None   \n",
        "\n",
        "                                        DistrictName  \\\n",
        "0  Grossmont-Cuyamaca                            ...   \n",
@@ -1068,17 +1076,17 @@
        "3           MiraCosta Community College District  www.miracosta.edu   \n",
        "4             Palomar Community College District    www.palomar.edu   \n",
        "\n",
-       "  NumberOfColleges CollegesPerDistrict  \n",
-       "0                2                   2  \n",
-       "1                2                   2  \n",
-       "2                1                   1  \n",
-       "3                1                   1  \n",
-       "4                1                   1  \n",
+       "  CollegesPerDistrict  \n",
+       "0                   2  \n",
+       "1                   2  \n",
+       "2                   1  \n",
+       "3                   1  \n",
+       "4                   1  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2800,13 +2808,13 @@
     "#     \"./figures/california_community_colleges_bw.png\",\n",
     "#     engine=\"kaleido\"\n",
     "# )\n",
-    "fig.write_html(\"./figures/california_community_colleges.html\")\n",
+    "fig.write_html(\"./docs/california_community_colleges.html\")\n",
     "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2847,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
